err/prom.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/prom'...
Listing './lib/python3.5/site-packages/prom/cli'...
Compiling './lib/python3.5/site-packages/prom/config.py'...
***   File "./lib/python3.5/site-packages/prom/config.py", line 68
    if re.search(ur'\:memory\:', h, re.I):
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/prom/interface'...
Compiling './lib/python3.5/site-packages/prom/interface/base.py'...
***   File "./lib/python3.5/site-packages/prom/interface/base.py", line 557
    raise e.__class__, e, exc_info[2]
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/prom/interface/sqlite.py'...
***   File "./lib/python3.5/site-packages/prom/interface/sqlite.py", line 350
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/prom-0.9.103.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/interface'...
Compiling './lib/python3.5/site-packages/tests/interface/__init__.py'...
***   File "./lib/python3.5/site-packages/tests/interface/__init__.py", line 732
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
